@@ -1,9 +1,9 @@
 ---
 name: Net-NAT-PMP
-version: 0.9.2
+version: 0.9.3
 author:
   - 'David Caldwell <david@porkrind.org>'
-abstract: Poke holes in a router's NAT using the nat-pmp protocol
+abstract: Poke holes in a router's NAT using the NAT-PMP protocol
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
@@ -12,7 +12,7 @@ requires:
 provides:
   Net::NAT::PMP:
     file: lib/Net/NAT/PMP.pm
-    version: 0.9.2
+    version: 0.9.3
 generated_by: Module::Build version 0.2806
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
